cabal-version:      2.4
name:               haskell-game
version:            0.1.0.0


synopsis: Podwodna Przygoda Kapitana Bomby
description: Gra tekstowa o przygodach asa Gwiezdnej Floty Tytusa Bomby
author:             Daniel Kobiałka, Aleksandra Majewska, Bartłomiej Dudek
maintainer:         01158615@pw.edu.pl

extra-source-files: CHANGELOG.md

executable haskell-game
    main-is:            Game.hs

    other-modules:      Ask,
                        Description,
                        Descriptions,
                        Flag,
                        GameStatus,
                        Items,
                        Look,
                        Map,
                        Pickup,
                        Reading,
                        Remove,
                        RoomStatus

    build-depends:    base ^>=4.16.4.0
                      
    hs-source-dirs:   app
    default-language: Haskell2010
